; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_swap_pager.c_swap_release.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_swap_pager.c_swap_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.ucred* }
%struct.ucred = type { i32 }

@curproc = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @swap_release(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ucred*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @curproc, align 8
  %5 = call i32 @PROC_LOCK(%struct.TYPE_4__* %4)
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @curproc, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.ucred*, %struct.ucred** %7, align 8
  store %struct.ucred* %8, %struct.ucred** %3, align 8
  %9 = load i32, i32* %2, align 4
  %10 = load %struct.ucred*, %struct.ucred** %3, align 8
  %11 = call i32 @swap_release_by_cred(i32 %9, %struct.ucred* %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @curproc, align 8
  %13 = call i32 @PROC_UNLOCK(%struct.TYPE_4__* %12)
  ret void
}

declare dso_local i32 @PROC_LOCK(%struct.TYPE_4__*) #1

declare dso_local i32 @swap_release_by_cred(i32, %struct.ucred*) #1

declare dso_local i32 @PROC_UNLOCK(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
